# oddswatch

./: .env.example  .gitignore  generate_deliverables_pdf.py  generate_presentation.py  pyproject.toml
dbt_oddswatch/: dbt_project.yml  profiles.yml
dbt_oddswatch/models/gold/: dim_date.sql  dim_game.sql  dim_market.sql  dim_team.sql  fact_game_odds.sql  schema.yml
dbt_oddswatch/models/staging/: schema.yml  sources.yml  stg_mlb_games.sql  stg_world_cup_games.sql
docs/: OddsWatch_Presentation.pptx  Team2_FinalPresentation.pptx
docs/superpowers/plans/: 2026-07-08-scaffolding-and-batch-pipeline.md
docs/superpowers/specs/: 2026-07-08-oddswatch-scaffolding-and-batch-pipeline-design.md
src/oddswatch/: pipeline.py
src/oddswatch/catalog/: glue_catalog.py
src/oddswatch/config/: settings.py
src/oddswatch/ingest/: mlb.py  world_cup.py
src/oddswatch/models/: bronze.py  gold.py  silver.py
src/oddswatch/transform/: bronze_to_silver.py  s3_writer.py  silver_to_gold.py
tests/: test_bronze_to_silver.py  test_config.py  test_glue_catalog.py  test_ingest.py  test_silver_to_gold.py
