[project]
name = "oddswatch"
version = "0.1.0"
description = "Real-time sports betting odds & line-movement platform"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "moto[s3,glue]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oddswatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
